# Voxel-Engine

./: CMakeLists.txt  pch.h
lib/entt/: CMakeLists.txt
lib/entt/docs/md/: entity.md  links.md  meta.md  process.md  signal.md
lib/entt/src/entt/core/: hashed_string.hpp
lib/glm/: manual.md  readme.md
lib/glm/doc/api/: a00059.html  a00059_source.html  a00243.html  a00353.html  jquery.js
lib/glm/glm/ext/: matrix_clip_space.hpp  matrix_clip_space.inl
lib/glm/glm/gtx/: range.hpp
lib/stb/: stb_image.h
res/geodata/: map.geojson
res/shaders/: mesh.fs  mesh.vs  primitive.fs  primitive.vs  text.fs
src/: Game.cpp  Game.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  System.h  Time.cpp  Time.h  World.cpp  World.h
src/components/: Destroy.cpp  Destroy.h  Position.cpp  Position.h  Rotation.cpp  Rotation.h  Scale.cpp  Scale.h  Tag.cpp  Tag.h  Text.cpp  Text.h  Transform.cpp  Transform.h  Visibility.cpp  Visibility.h
src/geometry/: AABB.cpp  AABB.h  Frustum.cpp  Frustum.h  Geometry.cpp  Geometry.h  Plane.cpp  Plane.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h
src/graphics/: Camera.cpp  Camera.h  ChunkMesh.cpp  ChunkMesh.h  Font.cpp  Font.h  Glyph.h  Image.cpp  Image.h  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Primitive.cpp  Primitive.h  PrimitiveMesh.cpp  PrimitiveMesh.h  Shader.cpp  Shader.h  Text.cpp  Text.h  TextMesh.cpp  TextMesh.h  Texture.cpp  Texture.h  Vertex.cpp  Vertex.h
src/renders/: MeshRenderer.cpp  MeshRenderer.h  PrimitiveRenderer.cpp  PrimitiveRenderer.h  TextRenderer.cpp  TextRenderer.h
src/systems/: ChunkSystem.cpp  ChunkSystem.h  CullingSystem.cpp  CullingSystem.h  DebugSystem.cpp  DebugSystem.h  DestroySystem.cpp  DestroySystem.h  TransformSystem.cpp  TransformSystem.h
src/utils/: Debug.cpp  Debug.h  Extentions.cpp  Extentions.h  ProcessInfo.cpp  ProcessInfo.h  Utils.h
src/voxels/: Block.cpp  Block.h  Chunk.cpp  Chunk.h  Terrain.cpp  Terrain.h  Voxel.h
src/window/: Input.cpp  Input.h  Window.cpp  Window.h
